--- a/delivery_food_03/goods.html
+++ b/delivery_food_03/goods.html
@@ -14,9 +14,9 @@
         <header class="header">
             <div class="container">
                 <div class="header-box">
-                    <div class="header-logo logo">
+                    <a href="./index.html" class="header-logo logo">
                         <img src="./images/logo.png" alt="logo">
-                    </div>
+                    </a>
                     <div class="header-controls">
                         <button class="btn btn-primary">
                             <img src="./images/icons/user.png" alt="user">
@@ -40,19 +40,24 @@
                             </div>
                             <div class="products-cart_description">
                                 <div class="products-cart_description-row">
-                                    <h5 class="products-cart_description--name"></h5>
+                                    <h5 class="products-cart_description--name">
+                                        Ролл угорь стандарт
+                                    </h5>
                                 </div>
                                 <div class="products-cart_description-row">
-                                    <p class="products-cart_description--text"></p>
+                                    <p class="products-cart_description--text">
+                                        Рис, угорь, соус унаги, кунжут, водоросли нори.
+                                    </p>
                                 </div>
                                 <div class="products-cart_description-row">
                                     <div class="products-cart_description-controls">
                                         <button class="btn btn-primary">
-                                            Войти
-                                            <img src="./images/icons/user.png" alt="user">
+                                            В корзину
+                                            <img src="./images/icons/shopping-cart-white.svg" alt="shopping-cart-white">
                                         </button>
-                                        <span class="products-cart_description-controls--price">
 
+                                        <span class="products-cart_description-controls--price">
+                                            250 ₽
                                         </span>
                                     </div>
                                 </div>
@@ -65,20 +70,25 @@
                             </div>
                             <div class="products-cart_description">
                                 <div class="products-cart_description-row">
-                                    <h4 class="products-cart_description--title">Пицца плюс</h4>
-                                    <div class="products-cart_description--bage">50 мин</div>
+                                    <h5 class="products-cart_description--name">
+                                        Калифорния лосось стандарт
+                                    </h5>
                                 </div>
                                 <div class="products-cart_description-row">
-                                    <div class="products-cart_description-info">
-                                        <div class="products-cart_description-info--raiting">
-                                            <img src="./images/icons/star.svg" alt="star"> 4.5
-                                        </div>
-                                        <div class="products-cart_description-info--price">
-                                            От 900 ₽
-                                        </div>
-                                        <div class="products-cart_description-info--group">
-                                            Пицца 
-                                        </div>
+                                    <p class="products-cart_description--text">
+                                        Рис, лосось, авокадо, огурец, майонез, икра масаго, водоросли нори.
+                                    </p>
+                                </div>
+                                <div class="products-cart_description-row">
+                                    <div class="products-cart_description-controls">
+                                        <button class="btn btn-primary">
+                                            В корзину
+                                            <img src="./images/icons/shopping-cart-white.svg" alt="shopping-cart-white">
+                                        </button>
+
+                                        <span class="products-cart_description-controls--price">
+                                            395 ₽
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -90,20 +100,25 @@
                             </div>
                             <div class="products-cart_description">
                                 <div class="products-cart_description-row">
-                                    <h4 class="products-cart_description--title">Пицца плюс</h4>
-                                    <div class="products-cart_description--bage">50 мин</div>
+                                    <h5 class="products-cart_description--name">
+                                        Окинава стандарт
+                                    </h5>
                                 </div>
                                 <div class="products-cart_description-row">
-                                    <div class="products-cart_description-info">
-                                        <div class="products-cart_description-info--raiting">
-                                            <img src="./images/icons/star.svg" alt="star"> 4.5
-                                        </div>
-                                        <div class="products-cart_description-info--price">
-                                            От 900 ₽
-                                        </div>
-                                        <div class="products-cart_description-info--group">
-                                            Пицца 
-                                        </div>
+                                    <p class="products-cart_description--text">
+                                        Рис, креветка отварная, сыр сливочный, лосось, огурец свежий...
+                                    </p>
+                                </div>
+                                <div class="products-cart_description-row">
+                                    <div class="products-cart_description-controls">
+                                        <button class="btn btn-primary">
+                                            В корзину
+                                            <img src="./images/icons/shopping-cart-white.svg" alt="shopping-cart-white">
+                                        </button>
+
+                                        <span class="products-cart_description-controls--price">
+                                            250 ₽
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -115,20 +130,25 @@
                             </div>
                             <div class="products-cart_description">
                                 <div class="products-cart_description-row">
-                                    <h4 class="products-cart_description--title">Пицца плюс</h4>
-                                    <div class="products-cart_description--bage">50 мин</div>
+                                    <h5 class="products-cart_description--name">
+                                        Цезарь маки хl
+                                    </h5>
                                 </div>
                                 <div class="products-cart_description-row">
-                                    <div class="products-cart_description-info">
-                                        <div class="products-cart_description-info--raiting">
-                                            <img src="./images/icons/star.svg" alt="star"> 4.5
-                                        </div>
-                                        <div class="products-cart_description-info--price">
-                                            От 900 ₽
-                                        </div>
-                                        <div class="products-cart_description-info--group">
-                                            Пицца 
-                                        </div>
+                                    <p class="products-cart_description--text">
+                                        Рис, куриная грудка копченая, икра масаго, томат, айсберг, соус цезарь...
+                                    </p>
+                                </div>
+                                <div class="products-cart_description-row">
+                                    <div class="products-cart_description-controls">
+                                        <button class="btn btn-primary">
+                                            В корзину
+                                            <img src="./images/icons/shopping-cart-white.svg" alt="shopping-cart-white">
+                                        </button>
+
+                                        <span class="products-cart_description-controls--price">
+                                            250 ₽
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -140,20 +160,25 @@
                             </div>
                             <div class="products-cart_description">
                                 <div class="products-cart_description-row">
-                                    <h4 class="products-cart_description--title">Пицца плюс</h4>
-                                    <div class="products-cart_description--bage">50 мин</div>
+                                    <h5 class="products-cart_description--name">
+                                        Ясай маки стандарт 185 г
+                                    </h5>
                                 </div>
                                 <div class="products-cart_description-row">
-                                    <div class="products-cart_description-info">
-                                        <div class="products-cart_description-info--raiting">
-                                            <img src="./images/icons/star.svg" alt="star"> 4.5
-                                        </div>
-                                        <div class="products-cart_description-info--price">
-                                            От 900 ₽
-                                        </div>
-                                        <div class="products-cart_description-info--group">
-                                            Пицца 
-                                        </div>
+                                    <p class="products-cart_description--text">
+                                        Рис, помидор свежий, перец болгарский, авокадо, огурец, айсберг
+                                    </p>
+                                </div>
+                                <div class="products-cart_description-row">
+                                    <div class="products-cart_description-controls">
+                                        <button class="btn btn-primary">
+                                            В корзину
+                                            <img src="./images/icons/shopping-cart-white.svg" alt="shopping-cart-white">
+                                        </button>
+
+                                        <span class="products-cart_description-controls--price">
+                                            250 ₽
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -165,20 +190,25 @@
                             </div>
                             <div class="products-cart_description">
                                 <div class="products-cart_description-row">
-                                    <h4 class="products-cart_description--title">Пицца плюс</h4>
-                                    <div class="products-cart_description--bage">50 мин</div>
+                                    <h5 class="products-cart_description--name">
+                                        Ролл с креветкой стандарт
+                                    </h5>
                                 </div>
                                 <div class="products-cart_description-row">
-                                    <div class="products-cart_description-info">
-                                        <div class="products-cart_description-info--raiting">
-                                            <img src="./images/icons/star.svg" alt="star"> 4.5
-                                        </div>
-                                        <div class="products-cart_description-info--price">
-                                            От 900 ₽
-                                        </div>
-                                        <div class="products-cart_description-info--group">
-                                            Пицца 
-                                        </div>
+                                    <p class="products-cart_description--text">
+                                        Рис, водоросли нори, креветки отварные, сыр сливочный, огурцы
+                                    </p>
+                                </div>
+                                <div class="products-cart_description-row">
+                                    <div class="products-cart_description-controls">
+                                        <button class="btn btn-primary">
+                                            В корзину
+                                            <img src="./images/icons/shopping-cart-white.svg" alt="shopping-cart-white">
+                                        </button>
+
+                                        <span class="products-cart_description-controls--price">
+                                            250 ₽
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -187,12 +217,84 @@
                 </div>
             </section> 
         </main>
+
+        <div class="cart-modal__overlay">
+            <div class="cart-modal">
+                <div class="cart-modal__header">
+                    <h2 class="cart-modal__header--title">Корзина</h2>
+                    <span class="cart-modal__header--close">
+                        <img src="./images/icons/close.svg" alt="close">
+                    </span>
+                </div>
+
+                <div class="cart-modal__body">
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cart-modal__footer">
+                    <div class="cart-modal__footer--price">
+                        1250 ₽
+                    </div>
+                    <div class="cart-modal__footer--controls">
+                        <button class="btn btn-primary">
+                            Оформить заказ
+                        </button>
+                        <button class="btn btn-outline">
+                            Отмена
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <footer class="footer">
             <div class="container">
                 <div class="footer-box">
-                    <div class="footer-logo logo">
+                    <a href="./index.html" class="header-logo logo">
                         <img src="./images/logo.png" alt="logo">
-                    </div>
+                    </a>
                     <div class="footer-nav">
                         <ul>
                             <li>Ресторанам</li>
