--- a/delivery_food_03/index.html
+++ b/delivery_food_03/index.html
@@ -14,9 +14,9 @@
         <header class="header">
             <div class="container">
                 <div class="header-box">
-                    <div class="header-logo logo">
+                    <a href="./index.html" class="header-logo logo">
                         <img src="./images/logo.png" alt="logo">
-                    </div>
+                    </a>
                     <div class="header-controls">
                         <button class="btn btn-primary">
                             <img src="./images/icons/user.png" alt="user">
@@ -57,7 +57,7 @@
                         />
                     </div>
                     <div class="products-wrapper">
-                        <div class="products-cart">
+                        <a href="./goods.html" class="products-cart">
                             <div class="products-cart_image">
                                 <img src="./images/resto/pizza-plus.jpg" alt="rest-1">
                             </div>
@@ -80,7 +80,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
                         <div class="products-cart">
                             <div class="products-cart_image">
@@ -88,7 +88,7 @@
                             </div>
                             <div class="products-cart_description">
                                 <div class="products-cart_description-row">
-                                    <h4 class="products-cart_description--title">Пицца плюс</h4>
+                                    <h4 class="products-cart_description--title">Тануки</h4>
                                     <div class="products-cart_description--bage">50 мин</div>
                                 </div>
                                 <div class="products-cart_description-row">
@@ -113,7 +113,7 @@
                             </div>
                             <div class="products-cart_description">
                                 <div class="products-cart_description-row">
-                                    <h4 class="products-cart_description--title">Пицца плюс</h4>
+                                    <h4 class="products-cart_description--title">FoodBand</h4>
                                     <div class="products-cart_description--bage">50 мин</div>
                                 </div>
                                 <div class="products-cart_description-row">
@@ -138,7 +138,7 @@
                             </div>
                             <div class="products-cart_description">
                                 <div class="products-cart_description-row">
-                                    <h4 class="products-cart_description--title">Пицца плюс</h4>
+                                    <h4 class="products-cart_description--title">Жадина-пицца</h4>
                                     <div class="products-cart_description--bage">50 мин</div>
                                 </div>
                                 <div class="products-cart_description-row">
@@ -163,7 +163,7 @@
                             </div>
                             <div class="products-cart_description">
                                 <div class="products-cart_description-row">
-                                    <h4 class="products-cart_description--title">Пицца плюс</h4>
+                                    <h4 class="products-cart_description--title">Точка еды</h4>
                                     <div class="products-cart_description--bage">50 мин</div>
                                 </div>
                                 <div class="products-cart_description-row">
@@ -188,7 +188,7 @@
                             </div>
                             <div class="products-cart_description">
                                 <div class="products-cart_description-row">
-                                    <h4 class="products-cart_description--title">Пицца плюс</h4>
+                                    <h4 class="products-cart_description--title">PizzaBurger</h4>
                                     <div class="products-cart_description--bage">50 мин</div>
                                 </div>
                                 <div class="products-cart_description-row">
@@ -210,12 +210,84 @@
                 </div>
             </section> 
         </main>
+
+
+        <div class="cart-modal__overlay">
+            <div class="cart-modal">
+                <div class="cart-modal__header">
+                    <h2 class="cart-modal__header--title">Корзина</h2>
+                    <span class="cart-modal__header--close">
+                        <img src="./images/icons/close.svg" alt="close">
+                    </span>
+                </div>
+
+                <div class="cart-modal__body">
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">Ролл угорь стандарт</p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cart-modal__footer">
+                    <div class="cart-modal__footer--price">
+                        1250 ₽
+                    </div>
+                    <div class="cart-modal__footer--controls">
+                        <button class="btn btn-primary">
+                            Оформить заказ
+                        </button>
+                        <button class="btn btn-outline">
+                            Отмена
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer class="footer">
             <div class="container">
                 <div class="footer-box">
-                    <div class="footer-logo logo">
+                    <a href="./index.html" class="footer-logo logo">
                         <img src="./images/logo.png" alt="logo">
-                    </div>
+                    </a>
                     <div class="footer-nav">
                         <ul>
                             <li>Ресторанам</li>
