--- a/delivery_food_04/goods.html
+++ b/delivery_food_04/goods.html
@@ -34,7 +34,7 @@
         <main class="main">
             <section class="products">
                 <div class="container">
-                    <div class="products-wrapper">
+                    <div class="products-wrapper" id="rest-card_container">
                         <div class="products-cart">
                             <div class="products-cart_image">
                                 <img src="./images/goods/good-1.jpg" alt="rest-1">
